force-app/main/default/objects/Product2/fields/AverageRating__c.field-meta.xml
<CustomField>
    <fullName>AverageRating__c</fullName>
    <description>Rating no Google Books</description>
    <label>Average Rating</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>