force-app/main/default/objects/Product2/fields/BookLead__c.field-meta.xml
<CustomField>
    <fullName>BookLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book Lead</label>
    <referenceTo>BookLead__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>