force-app/main/default/objects/Product2/fields/ColorHex__c.field-meta.xml
<CustomField>
    <fullName>ColorHex__c</fullName>
    <label>Color (Hexadecimal)</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>