force-app/main/default/objects/Product2/fields/ISBN_10__c.field-meta.xml
<CustomField>
    <fullName>ISBN_10__c</fullName>
    <externalId>true</externalId>
    <label>ISBN 10</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>