force-app/main/default/objects/Product2/fields/ISBN_13__c.field-meta.xml
<CustomField>
    <fullName>ISBN_13__c</fullName>
    <externalId>true</externalId>
    <label>ISBN 13</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>