force-app/main/default/objects/Product2/fields/MaturityRating__c.field-meta.xml
<CustomField>
    <fullName>MaturityRating__c</fullName>
    <label>Maturity Rating</label>
    <length>30</length>
    <type>Text</type>
</CustomField>