force-app/main/default/objects/Product2/fields/PageCount__c.field-meta.xml
<CustomField>
    <fullName>PageCount__c</fullName>
    <label>Page count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>