force-app/main/default/objects/Product2/fields/PublishedDate__c.field-meta.xml
<CustomField>
    <fullName>PublishedDate__c</fullName>
    <label>Published date</label>
    <type>Date</type>
</CustomField>