force-app/main/default/objects/Product2/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Isso é necessário pq a integração está envaindo o id do record type, não o nome do record type name</description>
    <formula>RecordType.Name</formula>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>