force-app/main/default/objects/Product2/recordTypes/Class.recordType-meta.xml
<RecordType>
    <fullName>Class</fullName>
    <active>true</active>
    <label>Class</label>
</RecordType>