force-app/main/default/objects/Product2/recordTypes/Color.recordType-meta.xml
<RecordType>
    <fullName>Color</fullName>
    <active>true</active>
    <label>Color</label>
</RecordType>