force-app/main/default/objects/Product2/recordTypes/Race.recordType-meta.xml
<RecordType>
    <fullName>Race</fullName>
    <active>true</active>
    <label>Race</label>
</RecordType>