force-app/main/default/objects/Product2/recordTypes/Skill.recordType-meta.xml
<RecordType>
    <fullName>Skill</fullName>
    <active>true</active>
    <label>Skill</label>
</RecordType>